--- a/.github/workflows/REvil.yml
+++ b/.github/workflows/REvil.yml
@@ -40,8 +40,12 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip || exit 1
-          pip install -r assets/requirements.txt || exit 1
+          python -m pip install --upgrade pip
+          pip install -r assets/requirements.txt
+
+      - name: Verify installed dependencies
+        run: |
+          pip freeze
 
       - name: Run script
         run: |
