--- a/.github/workflows/py.yml
+++ b/.github/workflows/py.yml
@@ -1,10 +1,14 @@
-name:  warp-scanner
+name: warp-scanner
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ['main']
+    paths:
+      - 'warpauto.py'
+      - '**/*.json'
   schedule:
-    - cron: '*/50 * * * *'
+    - cron: '0 */3 * * *'
+  workflow_dispatch:
 
 permissions:
   contents: write
@@ -13,30 +17,43 @@ permissions:
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v3
-      with:
-        python-version: "3.10"
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install ipaddress
-        pip install cryptography 
-        pip install requests
-        
-    - name: Run script
-      run: python warpauto.py
-       
-    - name: Commit and push changes
-      run: |          
-          git config --global user.email "darknessm.427@gmail.com"
-          git config --global user.name "darknessm427"
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          submodules: 'recursive'
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Set up Python 3.13
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.13'
+          cache: pip
+          architecture: x64
+
+      - name: Cache Python packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip || exit 1
+          pip install -r assets/requirements.txt || exit 1
+
+      - name: Run script
+        run: python warpauto.py || exit 1
+
+      - name: Commit and push changes
+        run: |
+          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
           git config credential.helper store
           git add -A
-          git commit -m "👾 Auto update - $(TZ='Asia/Tehran' date '+%Y-%m-%d %H:%M')"
+          git commit -m "👾 Auto update - $(TZ='Asia/Tehran' date '+%H:%M:%S')"
           git push
