--- a/.github/workflows/REvil.yml
+++ b/.github/workflows/REvil.yml
@@ -7,7 +7,7 @@ on:
       - 'warpREvil.py'
       - '**/*.json'
   schedule:
-    - cron: '0 */8 * * *'
+    - cron: '0 */5 * * *'
   workflow_dispatch:
 
 jobs:
@@ -56,6 +56,7 @@ jobs:
           git config --local user.name "darknessm427"
           git config --local user.email "171773043+darknessm427@users.noreply.github.com"
           git add -A
+          # Check if there are changes to commit
           if [ -n "$(git status --porcelain)" ]; then
             git commit -m "Automatic update $(TZ='Asia/Tehran' date '+%H:%M:%S')" \
                        -m "Warp private key, addresses, reserved and all IP's have been renewed"
@@ -63,5 +64,6 @@ jobs:
                 -c committer.name="github-actions[bot]" -c committer.email="41898282+github-actions[bot]@users.noreply.github.com" \
                 commit --amend --no-edit
             git push || exit 1
-          else:
+          else
             echo "No changes detected. Skipping commit and push."
+          fi
