build: add npm config files

--- a/.github/workflows/Py2.yml
+++ b/.github/workflows/Py2.yml
@@ -6,7 +6,7 @@ on:
     paths:
       - '**/warp2*'
   schedule:
-    - cron: '*/45 * * * *'
+    - cron: '0 */3 * * *'
   workflow_dispatch:
 
 jobs:
