--- a/.github/workflows/py.yml
+++ b/.github/workflows/py.yml
@@ -7,7 +7,7 @@ on:
       - 'warpauto.py'
       - '**/*.json'
   schedule:
-    - cron: '0 */3 * * *'
+    - cron: '0 0/3 * * *'
   workflow_dispatch:
 
 permissions:
